--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,9 @@ tensorflow~=2.17.0
 pyttsx3~=2.98
 SpeechRecognition~=3.14.1
 pygame~=2.6.1
-Flask-SocketIO~=5.3.4
+Flask-SocketIO~=5.5.1
 gTTS~=2.5.4
 opencv-python
 eventlet 
+flask-cors~=5.0.1
+pyserial~=3.5
